# hs-faust

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  checks.nix  flake.nix  hs-faust.cabal
.github/workflows/: flake-check.yaml
app/: Main.hs
flake/: devshells.nix  formatters.nix
src/: HSFaust.hs
src/HSFaust/: Compile.hs  Core.hs  FFI.hsc  Signal.hs  UI.hs
