cabal-version: 2.4
version:       0.0.1
name:          hs-faust
synopsis:      Haskell DSL for Faust Signal API
description:
  Provides Haskell bindings and a DSL to interact with the Faust Compiler's C Signal API (libfaust-signal).

homepage:      https://github.com/DivitMittal/hs-faust
category:      Sound, DSP
build-type:    Simple

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  build-depends:
    , base        >=4.7 && <5
    , bytestring
    , vector

  extra-libraries:  faust
  extra-lib-dirs:   /usr/local/lib
  include-dirs:     /usr/local/include

-- ld-options:      -lstdc++

library
  import:             common-settings
  exposed-modules:
    HSFaust
    HSFaust.Compile
    HSFaust.Core
    HSFaust.Signal
    HSFaust.UI

  other-modules:      HSFaust.FFI
  hs-source-dirs:     src
  build-tool-depends: hsc2hs:hsc2hs

executable hs-faust-example
  import:         common-settings
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  hs-faust
